[gd_scene load_steps=11 format=3 uid="uid://jctoum2s83s5"]

[ext_resource type="PackedScene" uid="uid://c738or0v7aejx" path="res://data/src/scenes/hex_grid.tscn" id="1_24fly"]
[ext_resource type="Script" path="res://data/src/scenes/game_scene.gd" id="1_pk3lm"]
[ext_resource type="Script" path="res://data/src/scenes/free_cam.gd" id="2_7q25c"]
[ext_resource type="Texture2D" uid="uid://bvckxhbkdkhc3" path="res://data/assets/icons/undo.png" id="3_2ab2u"]
[ext_resource type="Texture2D" uid="uid://pxhspqp20odh" path="res://data/assets/icons/arrow_left.png" id="4_mjwxb"]
[ext_resource type="Texture2D" uid="uid://cx87e7se22o8o" path="res://data/assets/icons/arrow_top.png" id="5_muh1k"]
[ext_resource type="Texture2D" uid="uid://csdkjvnp0edem" path="res://data/assets/icons/arrow_right.png" id="6_pbh67"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_u5scc"]

[sub_resource type="Sky" id="Sky_asbit"]
sky_material = SubResource("ProceduralSkyMaterial_u5scc")

[sub_resource type="Environment" id="Environment_0sc42"]
background_mode = 2
sky = SubResource("Sky_asbit")
volumetric_fog_albedo = Color(0.317647, 0.32549, 0.858824, 1)

[node name="GameScene" type="Node3D"]
script = ExtResource("1_pk3lm")

[node name="Scene" type="Node" parent="."]

[node name="HexGrid" parent="Scene" instance=ExtResource("1_24fly")]

[node name="UserInterface" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="UserInterface"]

[node name="TopBar" type="CenterContainer" parent="UserInterface/CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UserInterface/CanvasLayer/TopBar"]
layout_mode = 2

[node name="EndButton" type="Button" parent="UserInterface/CanvasLayer/TopBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_constants/icon_max_width = 50
icon = ExtResource("3_2ab2u")
flat = true
icon_alignment = 1

[node name="PreviousView" type="Button" parent="UserInterface/CanvasLayer/TopBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_constants/icon_max_width = 50
icon = ExtResource("4_mjwxb")
flat = true
icon_alignment = 1

[node name="ResetView" type="Button" parent="UserInterface/CanvasLayer/TopBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_constants/icon_max_width = 50
icon = ExtResource("5_muh1k")
flat = true
icon_alignment = 1

[node name="NextView" type="Button" parent="UserInterface/CanvasLayer/TopBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_constants/icon_max_width = 50
icon = ExtResource("6_pbh67")
flat = true
icon_alignment = 1

[node name="World" type="Node" parent="."]

[node name="FreeCam" type="Camera3D" parent="World"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 4, 4, 10.862)
script = ExtResource("2_7q25c")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="World"]
transform = Transform3D(-0.170249, 0.545927, -0.820353, 0.0558857, 0.836516, 0.545085, 0.983815, 0.0469542, -0.172926, -3, 4, 3.29633)

[node name="OmniLight3D" type="OmniLight3D" parent="World"]
transform = Transform3D(-0.099339, 0.995026, 0.00737536, -0.995049, -0.0993138, -0.00370782, -0.0029569, -0.00770718, 0.999966, 4.14932, 0.709092, -1.07771)
light_color = Color(0.301961, 1, 0.372549, 1)
light_energy = 11.858
shadow_enabled = true
shadow_opacity = 0.88
omni_range = 20.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="World"]
environment = SubResource("Environment_0sc42")
